# python-root-commit

./: .dockerignore  .envrc  .gitignore  Dockerfile  LICENSE  Makefile  README.md  flake.nix  pyproject.toml  shell.nix
.devcontainer/: devcontainer.json
python_template_project/: __about__.py  __init__.py  app.py  lib.py  lib_test.py
