[tool.poetry]
name = "python_template_project"
version = "0.1.0"
description = "Python template project"
authors = ["William Phetsinorath <william.phtesinorath@shikanime.studio>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
